// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox/> Render checkbox 1`] = `
<div
  class="form-group col-sm-12 offset-lg-1 col-lg-10"
>
  <div
    class="custom-control custom-checkbox "
  >
    <input
      checked=""
      class="custom-control-input"
      id="1"
      type="checkbox"
    />
    <label
      class="custom-control-label"
      for="1"
    >
      Test label
      <small
        class="form-text text-muted"
      >
        Some help text
      </small>
    </label>
  </div>
</div>
`;

exports[`<Checkbox/> Render uncheked checkbox 1`] = `
<div
  class="form-group col-sm-12 offset-lg-1 col-lg-10"
>
  <div
    class="custom-control custom-checkbox "
  >
    <input
      class="custom-control-input"
      id="1"
      type="checkbox"
    />
    <label
      class="custom-control-label"
      for="1"
    >
      Test label
      <small
        class="form-text text-muted"
      >
        Some help text
      </small>
    </label>
  </div>
</div>
`;
